--- a/app/index.html
+++ b/app/index.html
@@ -66,10 +66,10 @@
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#overview" class="mdl-layout__tab is-active">Overview</a>
-          <a href="#features" class="mdl-layout__tab">Products</a>
           <a href="#features" class="mdl-layout__tab">Services</a>
           <a href="#features" class="mdl-layout__tab">Gallery</a>
           <a href="#features" class="mdl-layout__tab">About Us</a>
+          <a href="#features" class="mdl-layout__tab">Contact</a>
         </div>
       </header>
       <main class="mdl-layout__content">
